Add something in index and add About page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <title>Test</title>
 </head>
 <body>
+    <h1>Some text here</h1>
     <p>
         There are something here
     </p>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates sunt consectetur possimus esse libero maiores voluptas ad repellat, <Strong>explicabo eos?</Strong>
+    </p>
+    <p><em>Lorem ipsum dolor sit amet.</em></p>
+    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
+    <p><a href="about.html">About</a></p>
     
 </body>
 </html>
