--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <p><em>Lorem ipsum dolor sit amet.</em></p>
     <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
     <p><a href="about.html">About</a></p>
+
+    <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin project logo" height="310" width="310">
     
 </body>
 </html>
